# web_apis_in_rust

./: Cargo.toml  README.md  api-keys.txt  master.key
src/: auth.rs  lib.rs  main.rs
tests/: api.rs
