[package]
name = "web_apis_in_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
base64 = "0.22.1"
chrono = "0.4.39"
env_logger = "0.11.6"
fastrand = "2.3.0"
log = "0.4.25"
r2d2 = "0.8.10"
r2d2_sqlite = "0.26.0"
ring = "0.17.8"
rusqlite = "0.33.0"
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-subscriber = "0.3.19"
